// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CallParticipantTile matches snapshot with video track 1`] = `
<View
  style={
    {
      "aspectRatio": 0.75,
      "backgroundColor": "#222",
      "borderRadius": 12,
      "flex": 1,
      "margin": 4,
      "overflow": "hidden",
    }
  }
/>
`;

exports[`CallParticipantTile matches snapshot without video track (placeholder) 1`] = `
<View
  style={
    {
      "aspectRatio": 0.75,
      "backgroundColor": "#222",
      "borderRadius": 12,
      "flex": 1,
      "margin": 4,
      "overflow": "hidden",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 8,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#fff",
          "fontFamily": "Inter_600SemiBold",
          "fontSize": 14,
        }
      }
    >
      alice
    </Text>
  </View>
</View>
`;
